// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sends a missing file payload 1`] = `
[
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "content": "File not found: '{missing.txt'",
          "label": "File",
        },
        "origin": {
          "file": "/test/file.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an existing file payload 1`] = `
[
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "content": "one,two,three<br>",
          "label": "test.txt",
        },
        "origin": {
          "file": "/test/file.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an existing image file payload 1`] = `
[
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "content": "<img src="file://tests/TestData/test.txt" alt="" />",
          "label": "Image",
        },
        "origin": {
          "file": "/test/file.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an image url payload 1`] = `
[
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "content": "<img src="http://localhost:35599/test.png" alt="" />",
          "label": "Image",
        },
        "origin": {
          "file": "/test/file.js",
          "function_name": "xxxx",
          "hostname": "fake-hostname",
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;
